Opened 12 years ago

Closed 12 years ago

#3881 closed defect (fixed)

wavpack: invalid number of samples

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: wavpackenc wavpack
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

http://samples.mplayerhq.hu/A-codecs/wavpcm/madbear.wav

C:\>ffmpeg -i madbear.wav -ac 1 -ar 300000 out.wv
ffmpeg version N-65672-g65f05ef Copyright (c) 2000-2014 the FFmpeg developers
  built on Aug 15 2014 22:01:33 with gcc 4.8.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
 --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-decklink --enable-zlib
  libavutil      54.  3.100 / 54.  3.100
  libavcodec     56.  0.101 / 56.  0.101
  libavformat    56.  1.100 / 56.  1.100
  libavdevice    56.  0.100 / 56.  0.100
  libavfilter     5.  0.100 /  5.  0.100
  libswscale      3.  0.100 /  3.  0.100
  libswresample   1.  0.100 /  1.  0.100
  libpostproc    53.  0.100 / 53.  0.100
Guessed Channel Layout for  Input Stream #0.0 : stereo
Input #0, wav, from 'madbear.wav':
  Metadata:
    encoder         : File created by GoldWave.  GoldWave copyright (C) Chris Cr
aig
  Duration: 00:00:06.48, bitrate: 352 kb/s
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 11025 Hz, 2 channels,
 s16, 352 kb/s
Output #0, wv, to 'out.wv':
  Metadata:
    encoder         : Lavf56.1.100
    Stream #0:0: Audio: wavpack, 300000 Hz, mono, s16p, 128 kb/s
    Metadata:
      encoder         : Lavc56.0.101 wavpack
Stream mapping:
  Stream #0:0 -> #0:0 (pcm_s16le (native) -> wavpack (native))
Press [q] to stop, [?] for help
size=    1504kB time=00:00:06.50 bitrate=1896.0kbits/s
video:0kB audio:1504kB subtitle:0kB other streams:0kB global headers:0kB muxing
overhead: 0.005973%
C:\>ffmpeg -i out.wv -f null -
ffmpeg version N-65672-g65f05ef Copyright (c) 2000-2014 the FFmpeg developers
  built on Aug 15 2014 22:01:33 with gcc 4.8.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
 --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-decklink --enable-zlib
  libavutil      54.  3.100 / 54.  3.100
  libavcodec     56.  0.101 / 56.  0.101
  libavformat    56.  1.100 / 56.  1.100
  libavdevice    56.  0.100 / 56.  0.100
  libavfilter     5.  0.100 /  5.  0.100
  libswscale      3.  0.100 /  3.  0.100
  libswresample   1.  0.100 /  1.  0.100
  libpostproc    53.  0.100 / 53.  0.100
[wavpack @ 02e1c700] Invalid number of samples: 150000
    Last message repeated 11 times
[wv @ 02e1c020] decoding for stream 0 failed
[wv @ 02e1c020] Could not find codec parameters for stream 0 (Audio: wavpack, 30
0000 Hz, mono): unspecified sample format
Consider increasing the value for the 'analyzeduration' and 'probesize' options
out.wv: could not find codec parameters
Input #0, wv, from 'out.wv':
  Metadata:
    encoder         : Lavf56.1.100
  Duration: 00:00:06.48, start: 0.000000, bitrate: 1901 kb/s
    Stream #0:0: Audio: wavpack, 300000 Hz, mono
[abuffer @ 02e1a2c0] Unable to parse option value "(null)" as sample format
    Last message repeated 1 times
[abuffer @ 02e1a2c0] Error setting option sample_fmt to value (null).
[graph 0 input from stream 0:0 @ 02ef6da0] Error applying options to the filter.

Error opening filters!

Change History (6)

comment:1 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavcodec
Keywords: wavpack added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Christophe, 12 years ago

Analyzed by developer: set

Thank you for filing this bug separately. Will soon send a patch for it. For the record, the encoder only tries to reduce the blocksize down to 150000, and the decoder has another limit.

comment:3 by Christophe, 12 years ago

Keywords: wavpackenc added; wavpack removed

comment:4 by Carl Eugen Hoyos, 12 years ago

Keywords: wavpack added

comment:5 by Christophe, 12 years ago

Sorry about the removal of the keyword, I thought wavpack would have matched wavpackenc and that the later was more precise.

Note: See TracTickets for help on using tickets.